--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#home">
-      <img class="nav-logo" src="logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
+      <img class="nav-logo" src="assert/logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
       LE-TECH 2K25
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -59,7 +59,7 @@
       <h2>S.A. Engineering College</h2>
       <h5>National Level Technical Symposium</h5>
       <h5>Entry : Per head <span class="text-warning">Rs.100</span></h5>
-      <img src="trophy-beker-1-unscreen.gif" alt="Trophy" class="img-fluid my-4" width="200">
+      <img src="assert/trophy-beker-1-unscreen.gif" alt="Trophy" class="img-fluid my-4" width="200">
     </header>
 
     <!-- Technical Events -->
@@ -70,7 +70,7 @@
         <!-- Card 1 -->
         <div class="col-md-4">
           <div class="event-card">
-            <img src="WEB.png" alt="Tech Event 1">
+            <img src="assert/WEB.png" alt="Tech Event 1">
             <h3>Web Master</h3>
             <p>Present your ideas and showcase your technical skills.</p>
             <button>Register</button>
@@ -79,7 +79,7 @@
         <!-- Card 2 -->
         <div class="col-md-4">
           <div class="event-card">
-            <img src="techhunt.png" alt="Tech Event 2">
+            <img src="assert/techhunt.png" alt="Tech Event 2">
             <h3>Tech Hunt</h3>
             <p>Compete in coding challenges and prove your programming skills.</p>
             <button>Register</button>
