--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assert/style.css">
 
 </head>
 <body>
@@ -71,16 +71,16 @@
         <div class="col-md-4">
           <div class="event-card">
             <img src="assert/WEB.png" alt="Tech Event 1">
-            <h3>Web Master</h3>
-            <p>Present your ideas and showcase your technical skills.</p>
-            <button>Register</button>
+            <h3>Web-Master</h3>
+            <p>Present your ideas and showcase your web development skills.</p>
+           <a href="https://harish222600.github.io/LE-TECH/"> <button >Register</button></a>
           </div>
         </div>
         <!-- Card 2 -->
         <div class="col-md-4">
           <div class="event-card">
             <img src="assert/techhunt.png" alt="Tech Event 2">
-            <h3>Tech Hunt</h3>
+            <h3>Hack-Quest</h3>
             <p>Compete in coding challenges and prove your programming skills.</p>
             <button>Register</button>
           </div>
@@ -88,8 +88,16 @@
         <!-- Card 3 -->
       <div class="col-md-4">
         <div class="event-card">
-          <img src="tech3.png" alt="Tech Event 3">
+          <img src="assert/Hack-Quest.png" alt="Tech Event 3">
           <h3>Code-Relay</h3>
+          <p>Design creative emblems using Adobe tools.</p>
+          <button>Register</button>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="event-card">
+          <img src="assert/ScrambleCode.png" alt="Tech Event 3">
+          <h3>Scramble-Code </h3>
           <p>Design creative emblems using Adobe tools.</p>
           <button>Register</button>
         </div>
@@ -106,8 +114,8 @@
         <!-- Card 1 -->
         <div class="col-md-4">
           <div class="event-card">
-            <img src="nontech1.png" alt="Non-Tech Event 1">
-            <h3>Connection Game</h3>
+            <img src="assert/connection.png" alt="Non-Tech Event 1">
+            <h3>Connection</h3>
             <p>Experience the thrill of an IPL-style auction.</p>
             <button>Register</button>
           </div>
@@ -116,8 +124,8 @@
         <!-- Card 2 -->
         <div class="col-md-4">
           <div class="event-card">
-            <img src="nontech2.png" alt="Non-Tech Event 2">
-            <h3>Start Music</h3>
+            <img src="assert/start-music.png  " alt="Non-Tech Event 2">
+            <h3>Start-Music</h3>
             <p>Act and respond to fun scenarios in this creative event.</p>
             <button>Register</button>
           </div>
@@ -125,7 +133,7 @@
         <!-- Card 3 -->
         <div class="col-md-4">
           <div class="event-card">
-            <img src="nontech3.png" alt="Non-Tech Event 3">
+            <img src="assert/Reverse Thinking.png" alt="Non-Tech Event 3">
             <h3>Reverse Thinking</h3>
             <p>Show off your dance moves in a 1v1 battle.</p>
             <button>Register</button>
@@ -134,8 +142,8 @@
       </div>
       <div class="col-md-4">
         <div class="event-card">
-          <img src="nontech3.png" alt="Non-Tech Event 3">
-          <h3>Reverse Thinking</h3>
+          <img src="assert/adaptive-music.png" alt="Non-Tech Event 3">
+          <h3>Adaptive thinking</h3>
           <p>Show off your dance moves in a 1v1 battle.</p>
           <button>Register</button>
         </div>
