--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
         <!-- Card 2 -->
         <div class="col-md-4">
           <div class="event-card">
-            <img src="assert/techhunt.png" alt="Tech Event 2">
+            <img src="assert/Hack-Quest.png" alt="Tech Event 2">
             <h3>Hack-Quest</h3>
-            <p>Compete in coding challenges and prove your programming skills.</p>
+            <p>This game is a quiz competition consisting of three exciting rounds.</p>
             <button>Register</button>
           </div>
         </div>
         <!-- Card 3 -->
       <div class="col-md-4">
         <div class="event-card">
-          <img src="assert/Hack-Quest.png" alt="Tech Event 3">
+          <img src="assert/coderelay.png" alt="Tech Event 3">
           <h3>Code-Relay</h3>
-          <p>Design creative emblems using Adobe tools.</p>
+          <p>Code Relay is a competitive debugging event where teams of four.</p>
           <button>Register</button>
         </div>
       </div>
@@ -98,7 +98,7 @@
         <div class="event-card">
           <img src="assert/ScrambleCode.png" alt="Tech Event 3">
           <h3>Scramble-Code </h3>
-          <p>Design creative emblems using Adobe tools.</p>
+          <p>Provide scrambled code and its output. The team must rearrange the code to produce the same output</p>
           <button>Register</button>
         </div>
       </div>
@@ -116,7 +116,7 @@
           <div class="event-card">
             <img src="assert/connection.png" alt="Non-Tech Event 1">
             <h3>Connection</h3>
-            <p>Experience the thrill of an IPL-style auction.</p>
+            <p>Think with the combination of images.</p>
             <button>Register</button>
           </div>
         </div>
@@ -135,7 +135,7 @@
           <div class="event-card">
             <img src="assert/Reverse Thinking.png" alt="Non-Tech Event 3">
             <h3>Reverse Thinking</h3>
-            <p>Show off your dance moves in a 1v1 battle.</p>
+            <p>It is a fun and creative game and encourages praticipants to think in an engaging way.</p>
             <button>Register</button>
           </div>
         </div>
@@ -144,7 +144,7 @@
         <div class="event-card">
           <img src="assert/adaptive-music.png" alt="Non-Tech Event 3">
           <h3>Adaptive thinking</h3>
-          <p>Show off your dance moves in a 1v1 battle.</p>
+          <p>A dance competition where participants improvise movements to spontaneously played music.</p>
           <button>Register</button>
         </div>
       </div>
@@ -156,10 +156,8 @@
       <h2>About Us</h2>
       <hr class="w-25 mx-auto">
       <div class="event-card">
-        <p><i class="bi bi-geo-alt"></i> S.A. Engineering College</p>
-        <p><i class="bi bi-person"></i> Convener: Dr. R. Anitha AP/MCA</p>
-        <p><i class="bi bi-phone"></i> Phone: 9940031460</p>
-        <p><i class="bi bi-person"></i> Co-Convener: Mrs. R. Rajeshwari AP/MCA</p>
+        <p><i class="bi bi-geo-alt"></i> <a href="https://maps.app.goo.gl/dLtWZYtZFX4aMRXS9" target="_blank">S.A. Engineering College</a></p>
+        <p><i class="bi bi-person"></i> Convener: Mrs. R. Rajeshwari AP/MCA</p>
         <p><i class="bi bi-phone"></i> Phone: 7358635695</p>
         <p><i class="bi bi-envelope"></i> Email: letech24@saec.ac.in</p>
       </div>
