--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#non-tech">
+          <a class="nav-link" href="rules.html">
             <i class="bi bi-person"></i> Rules & Regulations
           </a>
         </li>
@@ -55,7 +55,7 @@
   <div class="main-content">
     <!-- Header -->
     <header id="home" class="text-center py-5">        
-      <img src="LeTech.png" alt="LE-TECH" class="img-fluid mb-3" width="700">
+      <img src="assert/LeTech.png" alt="LE-TECH" class="img-fluid mb-3" width="700">
       <h2>S.A. Engineering College</h2>
       <h5>National Level Technical Symposium</h5>
       <h5>Entry : Per head <span class="text-warning">Rs.100</span></h5>
@@ -156,10 +156,10 @@
       <h2>About Us</h2>
       <hr class="w-25 mx-auto">
       <div class="event-card">
-        <p><i class="bi bi-geo-alt"></i> <a href="https://maps.app.goo.gl/dLtWZYtZFX4aMRXS9" target="_blank">S.A. Engineering College</a></p>
+        <p><i class="bi bi-geo-alt"></i> S.A. Engineering College</p>
         <p><i class="bi bi-person"></i> Convener: Mrs. R. Rajeshwari AP/MCA</p>
         <p><i class="bi bi-phone"></i> Phone: 7358635695</p>
-        <p><i class="bi bi-envelope"></i> Email: letech24@saec.ac.in</p>
+        <p><i class="bi bi-envelope"></i> Email: letech@saec.ac.in</p>
       </div>
     </section>
 
