changes in rules and regulation

--- a/rules.html
+++ b/rules.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="assert/css/style.css">
+  <link rel="stylesheet" href="assert/css/rule-style.css">
 </head>
 <body>
  
@@ -77,9 +77,9 @@
         <h5>Dr. V. Sujatha, Ph.D.,<br>Head/MCA</h5>
         <h4>Student Volunteer</h4>
         <ul>
-          <li>Ms. Vaishali S C</li>
-          <li>Ms. Aishwarya H</li>
-          <li>Mr. Pachaiyappan S</li>
+          <li class="coordinators">Ms. Vaishali S C</li>
+          <li class="coordinators">Ms. Aishwarya H</li>
+          <li class="coordinators">Mr. Pachaiyappan S</li>
         </ul>
         <p>
           <i class="bi bi-clock"></i> 10:15AM - 11:15AM <br>
@@ -107,10 +107,10 @@
         <h5>Mrs. K. Malathy, MCA., (Ph.D.)<br>Assistant Professor / MCA</h5>
         <h4>Student Volunteer</h4>
         <ul>
-          <li>Mr. Bharath Kumar M</li>
-          <li>Mr. Mohamed Roshan Akthar M</li>
-          <li>Mr. Akash P</li>
-          <li>Mr. Senthamilselvan K</li>
+          <li class="coordinators">Mr. Bharath Kumar M</li>
+          <li class="coordinators">Mr. Mohamed Roshan Akthar M</li>
+          <li class="coordinators">Mr. Akash P</li>
+          <li class="coordinators">Mr. Senthamilselvan K</li>
         </ul>
         <p>
           <i class="bi bi-clock"></i> 10:15AM - 11:00AM <br>
