--- a/rules.html
+++ b/rules.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="assert/css/style.css">
+  <link rel="stylesheet" href="assert/css/rule-style.css">
 </head>
 <body>
  
@@ -66,20 +66,68 @@
       <h2>Technical Events</h2>
       <hr class="w-25 mx-auto">
       <div class="event-card">
-        <h3>Demo Talk</h3>
+        <h3>WEB MASTER</h3>
         <h6>Basic rules about this event:</h6>
         <p>
-          1. Maximum of 2 Participants in a Team.<br>
-          2. Presentation Duration 5 - 10 Minutes (Including Q&A).<br>
-          3. Based on the Presentation and Responses to the Questions will be evaluated.
+          1. Maximum of 1 Participants in a Team.<br>
+          2. Time Duration 1 Hour.<br>
+          3. Onspot topic will be given.
         </p>
-        <h4>Event Coordinator</h4>
-        <h5>Dr. V. Sujatha, Ph.D.,<br>Head/MCA</h5>
         <h4>Student Volunteer</h4>
         <ul>
-          <li>Ms. Vaishali S C</li>
-          <li>Ms. Aishwarya H</li>
-          <li>Mr. Pachaiyappan S</li>
+          <li>Mr.Aman M <a href="tel:+91 7871085395">(7871085395)</a></li>     
+        </ul>
+        <p>
+          <i class="bi bi-clock"></i> 10:15AM - 11:15AM <br>
+          <i class="bi bi-geo-alt"></i> Main-Block MCA Seminar Hall
+        </p>
+      </div>
+      <div class="event-card">
+        <h3>Code-Relay</h3>
+        <h6>Basic rules about this event:</h6>
+        <p>
+          1. Maximum of 4 Participants in a Team.<br>
+          2. There will be 4 checkpoints <br>
+          3. each of the team member should complete the task in the checkpoints. <br>
+          4. There will be time limit for each checkpoints.
+        </p>
+        <h4>Student Volunteer</h4>
+        <ul>
+          <li>Mr.Aravind <a href="tel:+91 7358466746">(7358466746)</a></li>     
+        </ul>
+        <p>
+          <i class="bi bi-clock"></i> 10:15AM - 11:15AM <br>
+          <i class="bi bi-geo-alt"></i> Main-Block MCA Seminar Hall
+        </p>
+      </div>
+      <div class="event-card">
+        <h3>WEB MASTER</h3>
+        <h6>Basic rules about this event:</h6>
+        <p>
+          1. Maximum of 1 Participants in a Team.<br>
+          2. Time Duration 1 Hour.<br>
+          3. Onspot topic will be given.
+        </p>
+        <h4>Student Volunteer</h4>
+        <ul>
+          <li>Mr.Aman M <a href="tel:+91 7871085395">(7871085395)</a></li>     
+        </ul>
+        <p>
+          <i class="bi bi-clock"></i> 10:15AM - 11:15AM <br>
+          <i class="bi bi-geo-alt"></i> Main-Block MCA Seminar Hall
+        </p>
+      </div>
+      <div class="event-card">
+        <h3>WEB MASTER</h3>
+        <h6>Basic rules about this event:</h6>
+        <p>
+          1. Maximum of 1 Participants in a Team.<br>
+          2. Time Duration 1 Hour.<br>
+          3. Onspot topic will be given.
+        </p>
+        <h4>Student Volunteer</h4>
+        <ul>
+          <li>Mr.Aman M <a href="tel:+91 7871085395">(7871085395)</a></li>     
         </ul>
         <p>
           <i class="bi bi-clock"></i> 10:15AM - 11:15AM <br>
