--- a/rules.html
+++ b/rules.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,14 +13,16 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assert/css/rule-style.css">
 </head>
+
 <body>
- 
+
 
   <!-- Navbar for small screens -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img class="nav-logo" src="assert/logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
+        <img class="nav-logo" src="assert/logo.png" alt="Logo" width="60" height="60"
+          class="d-inline-block align-text-top">
         LE-TECH 2K25
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -75,12 +78,9 @@
         </p>
         <h4>Student Volunteer</h4>
         <ul>
-          <li>Mr.Aman M <a href="tel:+91 7871085395">(7871085395)</a></li>     
+          <li>Mr.Aman M <a href="tel:+91 7871085395">(7871085395)</a></li>
         </ul>
-        <p>
-          <i class="bi bi-clock"></i> 10:15AM - 11:15AM <br>
-          <i class="bi bi-geo-alt"></i> Main-Block MCA Seminar Hall
-        </p>
+
       </div>
       <div class="event-card">
         <h3>Code-Relay</h3>
@@ -93,48 +93,39 @@
         </p>
         <h4>Student Volunteer</h4>
         <ul>
-          <li>Mr.Aravind <a href="tel:+91 7358466746">(7358466746)</a></li>     
+          <li>Mr.Arvind <a href="tel:+91 7358466746">(7358466746)</a></li>
         </ul>
-        <p>
-          <i class="bi bi-clock"></i> 10:15AM - 11:15AM <br>
-          <i class="bi bi-geo-alt"></i> Main-Block MCA Seminar Hall
-        </p>
+
       </div>
       <div class="event-card">
-        <h3>WEB MASTER</h3>
+        <h3>Scramble Code</h3>
         <h6>Basic rules about this event:</h6>
         <p>
-          1. Maximum of 1 Participants in a Team.<br>
-          2. Time Duration 1 Hour.<br>
-          3. Onspot topic will be given.
+          1.We will provide you the code with the output of the code and the code will be in a random order and the team
+          need to rearrange the code in the proper manner.<br>
+          2.The participants should not rewrite any code from the give question<br>
+          3.Per team 2 members are allowed.<br>
+        </p>
+
+        <h4>Student Volunteer</h4>
+        <ul>
+          <li>Mrs.sonica <a href="tel:+91 6380754847">(6380754847)</a></li>
+        </ul>
+
+      </div>
+      <div class="event-card">
+        <h3>HACK QUEST</h3>
+        <h6>Basic rules about this event:</h6>
+        <p>
+          1. Maximum of 3 Participants in a Team.<br>
+          2. No external help (e.g., internet, AI tools) is allowed during the contest.<br>
+          3. This contest is the time based game.
         </p>
         <h4>Student Volunteer</h4>
         <ul>
-          <li>Mr.Aman M <a href="tel:+91 7871085395">(7871085395)</a></li>     
+          <li>Mr.Harish <a href="tel:+91 7305471455">(7305471455)</a></li>
         </ul>
-        <p>
-          <i class="bi bi-clock"></i> 10:15AM - 11:15AM <br>
-          <i class="bi bi-geo-alt"></i> Main-Block MCA Seminar Hall
-        </p>
-      </div>
-      <div class="event-card">
-        <h3>WEB MASTER</h3>
-        <h6>Basic rules about this event:</h6>
-        <p>
-          1. Maximum of 1 Participants in a Team.<br>
-          2. Time Duration 1 Hour.<br>
-          3. Onspot topic will be given.
-        </p>
-        <h4>Student Volunteer</h4>
-        <ul>
-          <li>Ms. Vaishali S C</li>
-          <li>Ms. Aishwarya H</li>
-          <li>Mr. Pachaiyappan S</li>
-        </ul>
-        <p>
-          <i class="bi bi-clock"></i> 10:15AM - 11:15AM <br>
-          <i class="bi bi-geo-alt"></i> Main-Block MCA Seminar Hall
-        </p>
+
       </div>
       <!-- Add more event cards similarly -->
     </section>
@@ -144,28 +135,72 @@
       <h2>Non-Technical Events</h2>
       <hr class="w-25 mx-auto">
       <div class="event-card">
-        <h3>IPL Auction</h3>
+        <h3>ADAPTIVE TUNE</h3>
+        <h6>Basic rules about this event:</h6>
+        <p>
+          1. Each team consists of 2 members.
+          <br>
+          2. Participants are allotted 2 to 3 minutes for their performance.
+          <br>
+          3. Music is played on the spot, requiring dancers to adapt their moves in real-time.
+
+        </p>
+        <h4>Student Volunteer</h4>
+        <ul>
+          <li>Ms.Rejimol <a href="tel:+91 9884614790">(9884614790)</a></li>
+        </ul>
+
+      </div>
+      <div class="event-card">
+        <h3>START MUSIC </h3>
+        <h6>Basic rules about this event:</h6>
+        <p>
+          1. Round 1- BGM round totally 10 bgm song played  and 6 team  selected to next  
+          round <br>
+          2. Round 2 – Action the word then find to word  your team mate and 4 team 
+          selected to next round . <br>
+          3. Round 3- final round , Your team mate wear headphone other one person 
+          action that song  team mate find the correct song and 2 team selected to 
+          winner and runner .
+        </p>
+        <h4>Student Volunteer</h4>
+        <ul>
+          <li>Mr.Harish <a href="tel:+91 7305471455">(7305471455)</a></li>
+        </ul>
+
+      </div>
+      <div class="event-card">
+        <h3>REVERSE THINKING</h3>
+        <h6>Basic rules about this event:</h6>
+        <p>
+          1. Maximum of 1 Participants in a Team.<br>
+          2. Participants are allotted 1 minute for the task.
+          <br>
+          3. This contest is the time based game. <br>
+          4. Participants have to think opposite or reverse of the given statement or scenario. <br>
+          5. Participants answer questions irrelevantly for 2 minutes
+        </p>
+        <h4>Student Volunteer</h4>
+        <ul>
+          <li>Ms.Geetha <a href="tel:+91 8122271662">(8122271662)</a></li>
+        </ul>
+
+      </div>
+      <div class="event-card">
+        <h3>CONNECTION</h3>
         <h6>Basic rules about this event:</h6>
         <p>
           1. Maximum of 2 Participants in a Team.<br>
-          2. Prelims will be conducted in the form of quiz.<br>
-          3. Only Selected teams will advance to the Final round.<br>
-          4. Final Round: Auction.<br>
-          5. Final Round Details will be announced on the day of the event.
+          2.  First team to ring the buzzer will have the chance to answer. 
+          Time Limit: Each question has a 15 second time limit.
+          <br>
+          3.  Negative mark will be provided for every Incorrect answer.
         </p>
-        <h4>Event Coordinator</h4>
-        <h5>Mrs. K. Malathy, MCA., (Ph.D.)<br>Assistant Professor / MCA</h5>
         <h4>Student Volunteer</h4>
         <ul>
-          <li class="coordinators">Mr. Bharath Kumar M</li>
-          <li class="coordinators">Mr. Mohamed Roshan Akthar M</li>
-          <li class="coordinators">Mr. Akash P</li>
-          <li class="coordinators">Mr. Senthamilselvan K</li>
+          <li>Mr.vincent <a href="tel:+91 9566239154">(9566239154)</a></li>
         </ul>
-        <p>
-          <i class="bi bi-clock"></i> 10:15AM - 11:00AM <br>
-          <i class="bi bi-geo-alt"></i> Main Block MCA
-        </p>
+
       </div>
       <!-- Add more event cards similarly -->
     </section>
@@ -184,11 +219,13 @@
 
     <!-- Footer -->
     <footer class="text-center py-4">
-      <p class="mb-0">Powered by <a href="https://www.saec.ac.in/" target="_blank" class="text-warning">saec.ac.in</a></p>
+      <p class="mb-0">Powered by <a href="https://www.saec.ac.in/" target="_blank" class="text-warning">saec.ac.in</a>
+      </p>
     </footer>
   </div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
