--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="main-content">
     <!-- Header -->
     <header id="home" class="text-center py-5">        
-      <img src="assert/LeTech.png" alt="LE-TECH" class="img-fluid mb-3" width="700">
+      <img src="assert/LeTech2.png" alt="LE-TECH" class="img-fluid mb-3" width="700">
       <h2>S.A. Engineering College</h2>
       <h5>National Level Technical Symposium</h5>
       <h5>Entry : Per head <span class="text-warning">Rs.100</span></h5>
@@ -149,6 +149,22 @@
         </div>
       </div>
     </div>
+    </section>
+    <section id="tech" class="my-5">
+      <h2>E Sports</h2>
+      <hr class="w-25 mx-auto">
+      <div class="row">
+        <!-- Card 1 -->
+        <div class="col-md-4">
+          <div class="event-card">
+            <img src="assert/ff.png" alt="Tech Event 1">
+            <h3>Free Fire</h3>
+          <p>Present the best best game play in free fire. </p>
+           <a href="https://harish222600.github.io/LE-TECH/"> <button >Register</button></a>
+          </div>
+        </div>
+    </div>
+    
     </section>
 
     <!-- About Us -->
