--- a/rules.html
+++ b/rules.html
@@ -109,7 +109,7 @@
 
         <h4>Student Volunteer</h4>
         <ul>
-          <li>Mrs.sonica <a href="tel:+91 6380754847">(6380754847)</a></li>
+          <li>Ms.sonica <a href="tel:+91 6380754847">(6380754847)</a></li>
         </ul>
 
       </div>
