--- a/rules.html
+++ b/rules.html
@@ -165,7 +165,7 @@
         </p>
         <h4>Student Volunteer</h4>
         <ul>
-          <li>Mr.Harish <a href="tel:+91 7305471455">(7305471455)</a></li>
+          <li>Mr.Karthik M <a href="tel:+91 8608897150">(8608897150)</a></li>
         </ul>
 
       </div>
