--- a/rules.html
+++ b/rules.html
@@ -109,7 +109,7 @@
 
         <h4>Student Volunteer</h4>
         <ul>
-          <li>Ms.sonica <a href="tel:+91 6380754847">(6380754847)</a></li>
+          <li>Mrs.sonica <a href="tel:+91 6380754847">(6380754847)</a></li>
         </ul>
 
       </div>
@@ -165,7 +165,7 @@
         </p>
         <h4>Student Volunteer</h4>
         <ul>
-          <li>Mr.Karthik M <a href="tel:+91 8608897150">(8608897150)</a></li>
+          <li>Mr.Harish <a href="tel:+91 7305471455">(7305471455)</a></li>
         </ul>
 
       </div>
