--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <img src="assert/WEB.png" alt="Tech Event 1">
             <h3>Web-Master</h3>
             <p>Present your ideas and showcase your web development skills.</p>
-            <a href="rules/webmaster.html"><button>Rules</button></a>
+            <a href="https://forms.gle/3f5vCBW7sfWu9Gbo9"><button>Rules</button></a>
           </div>
         </div>
         <!-- Card 2 -->
@@ -167,7 +167,7 @@
         <p><i class="bi bi-person"></i> Convener: Mrs. R. Rajeshwari AP/MCA</p>
         <p><i class="bi bi-phone"></i> Phone: 7358635695</p>
         <p><i class="bi bi-person"></i> Co-Convener: Mrs. N. LAKSHMI AP/MCA</p>
-        <p><i class="bi bi-phone"></i> Phone: 7358635695</p>
+        <p><i class="bi bi-phone"></i> Phone: 9840949352</p>
         <p><i class="bi bi-envelope"></i> Email: letech@saec.ac.in</p>
       </div>
     </section>
