--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </header>
     
     <section>
-      <a href="https://forms.gle/d7MofjuMKrCo3qc79"><button class="reg-button">Register <br> Now!</button></a>
+      <a href="https://forms.gle/3f5vCBW7sfWu9Gbo9"><button class="reg-button">Register <br> Now!</button></a>
     </section>
     <!-- Technical Events -->
     <section id="tech" class="my-5">
@@ -73,7 +73,7 @@
             <img src="assert/WEB.png" alt="Tech Event 1">
             <h3>Web-Master</h3>
             <p>Present your ideas and showcase your web development skills.</p>
-            <a href="https://forms.gle/3f5vCBW7sfWu9Gbo9"><button>Rules</button></a>
+            <a href="rules/webmaster.html"><button>Rules</button></a>
           </div>
         </div>
         <!-- Card 2 -->
