--- a/rules/freefire.html
+++ b/rules/freefire.html
@@ -73,7 +73,7 @@
         <p class="rule-title">Rule Book</p>
       </header>
       <section>
-        <a href="https://forms.gle/d7MofjuMKrCo3qc79"><button class="reg-button" >Register <br> Now!</button></a>
+        <a href="https://forms.gle/3f5vCBW7sfWu9Gbo9"><button class="reg-button" >Register <br> Now!</button></a>
       </section>
 
 
