--- a/rules/reversethinking.html
+++ b/rules/reversethinking.html
@@ -97,6 +97,7 @@
              2. repetitions.<br>
              3. one-word answers.<br>
              4. remaining silent for more than 5 seconds result in disqualification.<br>
+             5. players are not allowed to ask question.
             
             Team Composition: Individual participant. <br>
             Winning Criteria: The first participant successfully completed their task declared as a winner.<br>
