--- a/rules/reversethinking.html
+++ b/rules/reversethinking.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -96,8 +96,9 @@
              1. Relevant answers.<br>
              2. repetitions.<br>
              3. one-word answers.<br>
-             4. remaining silent for more than 5 seconds result in disqualification.<br>
+             4. remaining silent for more than 5 seconds. <br>
              5. players are not allowed to ask question.<br>
+             <b>resulting in disqualification</b> <br>
             
             Team Composition: Individual participant. <br>
             Winning Criteria: The first participant successfully completed their task declared as a winner.<br>
