--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       <h1 >S.A. Engineering College</h1>
       <h5>National Level Technical Symposium</h5>
       <img src="assert/LeTech2.png" alt="LE-TECH" class="img-fluid mb-3" width="700px">      
-      <h5>Entry : Per head <span class="text-warning">Rs.100</span></h5>
+      <h5>Entry : Per head <span class="text-warning">Rs.100</span></h5
+      <h5>Only 8 Members per college</h5>
       <img src="assert/trophy-beker-1-unscreen.gif" alt="Trophy" class="img-fluid my-4" width="200">
     </header>
     
