--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <img src="assert/LeTech2.png" alt="LE-TECH" class="img-fluid mb-3" width="700px">      
       <h5>Entry : Per head <span class="text-warning">Rs.100</span></h5
       <h5>Only 8 Members per college</h5>
+      <h5>Only arts and science students are allowed </h5>
       <img src="assert/trophy-beker-1-unscreen.gif" alt="Trophy" class="img-fluid my-4" width="200">
     </header>
     
