--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <h5>Entry : Per head <span class="text-warning">Rs.100</span></h5
       <h5>Only 8 Members per college</h5>
       <h5>Only arts and science students are allowed </h5>
+      <h5>Offline Registration closed by 8.30AM</h5>
       <img src="assert/trophy-beker-1-unscreen.gif" alt="Trophy" class="img-fluid my-4" width="200">
     </header>
     
